<resources>
    <string name="app_name">NutriSchule</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Week Schedule Types -->
    <string name="type_title">COMIDA</string>
    <string name="type1">Al despertar</string>
    <string name="type2">Desayuno</string>
    <string name="type3">Colación</string>
    <string name="type4">Comida</string>
    <string name="type5">Colación</string>
    <string name="type6">Cena</string>

    <!-- Week Schedule Hours -->
    <string name="hour_title">HORA</string>
    <string name="hour1">00:00</string>
    <string name="hour2">05:15 AM</string>
    <string name="hour3">09:30 AM</string>
    <string name="hour4">12:30 AM</string>
    <string name="hour5">04:00 PM</string>
    <string name="hour6">08:30 PM</string>

    <!-- MONDAY -->
    <string name="monday_title">LUNES</string>
    <string name="monday_1">Té</string>
    <string name="monday_2">Huevos estrellados</string>
    <string name="monday_3">Pepino y fruta</string>
    <string name="monday_4">Atún con verduras</string>
    <string name="monday_5">Pepino y frutos secos</string>
    <string name="monday_6">Jamón con verduras</string>

    <!-- TUESDAY -->
    <string name="tuesday_title">MARTES</string>
    <string name="tuesday_1">Té</string>
    <string name="tuesday_2">Sandwich de jamón</string>
    <string name="tuesday_3">Té y fruta</string>
    <string name="tuesday_4">Ensalada de pechuga</string>
    <string name="tuesday_5">Pepino y frutos secos</string>
    <string name="tuesday_6">Taco de queso</string>

    <!-- WEDNESDAY -->
    <string name="wednesday_title">MIÉRCOLES</string>
    <string name="wednesday_1">Té</string>
    <string name="wednesday_2">Huevo con jamón</string>
    <string name="wednesday_3">Pepino y fruta</string>
    <string name="wednesday_4">Atún tipo mantaraya</string>
    <string name="wednesday_5">Pepino y frutos secos</string>
    <string name="wednesday_6">Huevos cocidos</string>

    <!-- THURSDAY -->
    <string name="thursday_title">JUEVES</string>
    <string name="thursday_1">Té</string>
    <string name="thursday_2">Licuado</string>
    <string name="thursday_3">Té y fruta</string>
    <string name="thursday_4">Sandwich de pechuga</string>
    <string name="thursday_5">Pepino y frutos secos</string>
    <string name="thursday_6">Rollos de jamón con queso</string>

    <!-- FRIDAY -->
    <string name="friday_title">VIERNES</string>
    <string name="friday_1">Té</string>
    <string name="friday_2">Huevos rancheros</string>
    <string name="friday_3">Té y fruta</string>
    <string name="friday_4">Tacos de pechuga</string>
    <string name="friday_5">Pepino y frutos secos</string>
    <string name="friday_6">Pechuga desmenuzada con verduras</string>

    <!-- SATURDAY -->
    <string name="saturday_title">SÁBADO</string>
    <string name="saturday_1">Té</string>
    <string name="saturday_2">Sandwich de queso caliente</string>
    <string name="saturday_3">Pepino y fruta</string>
    <string name="saturday_4">Sandwich de atún</string>
    <string name="saturday_5">Pepino y frutos secos</string>
    <string name="saturday_6">Huevo revuelto con verduras</string>

    <!-- SUNDAY -->
    <string name="sunday_title">DOMINGO</string>
    <string name="sunday_1">Té</string>
    <string name="sunday_2">Chilaquiles</string>
    <string name="sunday_3">Pepino y fruta</string>
    <string name="sunday_4">Libre menos letra roja</string>
    <string name="sunday_5">Pepino y frutos secos</string>
    <string name="sunday_6">Licuado verde</string>




</resources>